<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_weather"
            android:icon="@drawable/ic_weather"
            android:title="@string/weather" />
        <item
            android:id="@+id/nav_resources"
            android:icon="@drawable/ic_edu"
            android:enabled="false"
            android:title="@string/resources" />
        <item
            android:id="@+id/nav_expenses"
            android:icon="@drawable/ic_expense"
            android:title="@string/expenses" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_feature_work"
            android:title="@string/nav_profile"/>

    </menu>
